# nullnet-firewall

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
samples/: firewall.txt  firewall_for_tests_1.txt  firewall_for_tests_2.txt  firewall_for_tests_3.txt  firewall_for_tests_error_duplicated_option.txt  firewall_for_tests_error_empty_option.txt  firewall_for_tests_error_invalid_action.txt  firewall_for_tests_error_invalid_dest_value.txt  firewall_for_tests_error_invalid_direction.txt  firewall_for_tests_error_invalid_dport_value.txt  firewall_for_tests_error_invalid_icmp_type_value.txt  firewall_for_tests_error_invalid_log_level.txt  firewall_for_tests_error_invalid_protocol_value.txt  firewall_for_tests_error_invalid_source_value.txt  firewall_for_tests_error_invalid_sport_value.txt  firewall_for_tests_error_not_applicable_icmp_type.txt  firewall_for_tests_error_not_enough_arguments.txt  firewall_for_tests_error_unknown_option.txt
src/: data_link.rs  fields.rs  firewall_action.rs  firewall_direction.rs  firewall_error.rs  firewall_option.rs  firewall_rule.rs  ip_collection.rs  lib.rs  log_level.rs  port_collection.rs  raw_packets.rs
src/fields/: fields.rs  ip_header.rs  mod.rs  net_header.rs  transport_header.rs
src/logs/: log_entry.rs  log_ip.rs  log_packet.rs  log_timestamp.rs  logger.rs  mod.rs
src/utils/: icmp_type.rs  ip_collection.rs  log_level.rs  mod.rs  port_collection.rs  proto.rs  raw_packets.rs
