[package]
name = "nullnet-firewall"
version = "0.2.1"
edition = "2021"
authors = [ "Giuliano Bellini" ]
description = "Rust-based firewall for network drivers"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/GyulyVGC/nullnet-firewall"
keywords = [ "firewall", "network", "packet", "security", "log" ]
categories = [ "network-programming" ]

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
etherparse = "0.13.0"
chrono = { version = "0.4.31", default_features = false, features = ["clock"] }
rusqlite = "0.30.0"

[dev-dependencies]
serial_test = { version = "3.0.0", default_features = false }