[package]
name = "nullnet-firewall"
version = "0.2.2"
edition = "2021"
authors = [ "Giuliano Bellini" ]
description = "Rust-based firewall for network drivers"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/GyulyVGC/nullnet-firewall"
keywords = [ "firewall", "network", "packet", "security", "log" ]
categories = [ "network-programming" ]

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
etherparse = "0.14.2"
chrono = { version = "0.4.31", default_features = false, features = ["clock"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }

[dev-dependencies]
serial_test = { version = "3.0.0", default_features = false }