[package]
name = "nullnet-firewall"
version = "0.2.2"
edition = "2024"
authors = [ "Giuliano Bellini" ]
description = "Rust-based firewall for network drivers"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/GyulyVGC/nullnet-firewall"
keywords = [ "firewall", "network", "packet", "security", "log" ]
categories = [ "network-programming" ]

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
etherparse = "0.19.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }

[dev-dependencies]
serial_test = { version = "3.2.0", default-features = false }